Create vote and imageservice
