# controllers/Vote.js
@@ -43,6 +43,16 @@ module.exports.getVoteById = function getVoteById (req, res, next, vote_id) {
     });
 };
 
+module.exports.getVoteByImage = function getVoteByImage (req, res, next, image_id) {
+  Vote.getVoteByImage(image_id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.updateVoteById = function updateVoteById (req, res, next, body, vote_id) {
   Vote.updateVoteById(body, vote_id)
     .then(function (response) {
